# Parallel_Programming

./: .gitignore  README.md
00-latency/: CMakeLists.txt  README.md
00-latency/src/: measure_latency.cpp
01-pi-computing/: CMakeLists.txt  README.md
01-pi-computing/include/: pi-computation.hpp  program_options.hpp
01-pi-computing/src/: parallel.cpp  pi-computation.cpp  pi_computation.cpp  program_options.cpp  sequential.cpp
01-pi-computing/test/: opts.sh  run.sh
01-transport-equation/: CMakeLists.txt  README.md
01-transport-equation/include/: grid.hpp  parallel_solver.hpp  sequential_solver.hpp  solver.hpp  solver_base.hpp
01-transport-equation/src/: main.cpp  parallel.cpp  sequential.cpp
02-transport-equation/: README.md
02-transport-equation/include/: analytical_solution.hpp  grid.hpp  parallel_solver.hpp  sequential_solver.hpp  solution_visualization.hpp  solver_base.hpp
02-transport-equation/src/: parallel.cpp  sequential.cpp  solution_visualization.cpp
03-integral/: CMakeLists.txt
03-integral/include/: numerical_integrator.hpp  parallel_integrator.hpp  sequential_integrator.hpp
03-integral/src/: parallel.cpp  parallel_integrator.cpp  sequential.cpp
03-numerical-integation/: CMakeLists.txt  README.md
03-numerical-integation/include/: sequential_integrator.hpp
03-numerical-integation/src/: parallel.cpp  parallel_integrator.cpp  sequential.cpp
04-openmp/: CMakeLists.txt
04-openmp/include/: matrix.hpp
04-openmp/introduction/: CMakeLists.txt
04-openmp/introduction/src/: harmonic-series.cpp  hello.cpp  ordered-access.cpp
04-openmp/matrix-multiplication/: CMakeLists.txt  stats.py
04-openmp/matrix-multiplication/include/: matrix.hpp
04-openmp/matrix-multiplication/src/: matrix.cpp
04-openmp/nested-parallelism/: CMakeLists.txt
04-openmp/nested-parallelism/src/: nested.cpp
04-openmp/src/: matrix.cpp
05-loop-parallelization/: CMakeLists.txt  conanfile.txt  measure.py
05-loop-parallelization/include/: common.hpp  simple_matrix.hpp
05-loop-parallelization/src/: parallel_mpi.cpp  parallel_omp.cpp  sequential.cpp
